Revision history for CourtIO-Pod-OpenAPI

{{$NEXT}}

"0.04  2020-04-03"
  - Allow x-mojo-to to be either @method_name or @#method_name.
  - Add some basic sanity checking on each parsed openapi node

"0.03  2020-04-03"
  - Sort paths in output by path name.  YAML spec of each path is still in
    "preserve order" mode

"0.02  2020-04-02"
  - Don't include "paths" key in the output.

"0.01  2020-03-31"
  - Initial version